--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,27 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, placeholder: 'you@email.com' %>
+  </div>
+
+  <div class="field">
+    <%= f.label :name %><br>
+    <%= f.text_field :name, placeholder: 'First and Last Name' %>
+  </div>
+
+  <div class="field">
+    <%= f.label :username %><br>
+    <%= f.text_field :username, placeholder: '@your_fancy_name' %>
+  </div>
+
+  <div class="field">
+    <%= f.label :bio %><br>
+    <%= f.text_field :bio, placeholder: 'Your bio here...' %>
+  </div>
+
+  <div class="field">
+    <%= f.label :location %><br>
+    <%= f.text_field :location, placeholder: 'New Orleans, Louisiana' %>
   </div>
 
   <div class="field">
