--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,6 +6,21 @@
       <h5><p><%= @user.bio %></p></h5>
       <h5><%= @user.location %></h5>
       <h5>Joined on <%= @user.created_at.strftime("%B %Y") %></h5>
+
+      <% if @user.id != current_user.id %>
+        <% if current_user.friends.include?(@user) %>
+          <%= link_to 'Unfollow', relationship_path(current_user.relationships.find_by_friend_id(@user)), method: :delete %>
+        <% else %>
+          <%= link_to 'Follow', relationships_path(friend_id: @user), method: :post %>
+        <% end %>
+      <% end %>
+
+      <br>
+      <%= @user.relationships.count %> Following
+      <br>
+      <% @user.relationships.each do |relationship| %>
+        <%= link_to relationship.friend.name, profile_path(relationship.friend) %><br>
+      <% end %>
     </div>
 
     <div class= "col-xs-7">
